# awscratch

./: CMakeLists.txt  Makefile
include/awscratch/: APIGuard.h  enable_pretty_printer.h  macros.h  traits.h
include/awscratch/ec2/: FriendlySyncEC2Client.h  ec2_type_policy.h  filter_factory.h
include/awscratch/elasticache/: FriendlySyncElasticacheClient.h  PrettyCacheCluster.h  elasticache_type_policy.h
include/awscratch/prettyprint/: enable.h
include/awscratch/s3/: FriendlySyncS3Client.h  PrettyBucket.h  PrettyObject.h  s3_type_policy.h
include/awscratch/util/: util.h
scripts/: deps.sh
src/: main.cpp
src/awscratch/util/: util.cpp
